crates/keron-lang/tests/corpus/errors/check/struct_duplicate_field.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: field `x` is already supplied
  --> 3:30
  |
3 | val p: Point = Point { x: 1, x: 2, y: 3 }
  |                              ^
